feat: inserimento dei metodi di vueJs alla pagina

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+    <h1 id="title">{{ message }}</h1>
+    <script src="frame.js"></script>
 </body>
 </html>
